added dashboards for retailer and loyalty points view for  retailer, fieldstaff and salesmanager
